--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               </video>
               <h2 style="text-align: center;">
                 <a
-                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/009.ply">Open
+                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/008.ply">Open
                   Interactive Viewer
                 </a>
               </h2> 
@@ -454,64 +454,123 @@
         <div class="container is-max-desktop">
           <div class="columns is-centered">
             <div class="column">
-              <h2 style="text-align: center;">
-                <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/016.jpeg" width="50%">
-              </h2>
-              <video controls muted loop width="270" height="270">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">Input Video</b></h4>
+              <video controls muted loop>
                 <!-- Your video here -->
-                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/results/016.mp4" type="video/mp4">
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/001.mov" type="video/mp4">
               </video>
-              <h2 style="text-align: center;">
-                <a
-                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/016.ply">Open
-                  Interactive Viewer
-                </a>
-              </h2> 
             </div>
-            <div class="column">
-              <h2 style="text-align: center;">
-                <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/017.jpeg" width="50%">
-              </h2>
-              <video controls muted loop width="270" height="270">
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">4D Rendering Results</b></h4>
+              <video controls muted loop width="247" height="247">
                 <!-- Your video here -->
-                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/results/017.mp4" type="video/mp4">
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/001.mp4" type="video/mp4">
               </video>
-              <h2 style="text-align: center;">
-                <a
-                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/017.ply">Open
-                  Interactive Viewer
-                </a>
-              </h2> 
             </div>
+          </div>
+        </div>
+        <!-- row 2 -->
+        <h3 class="title is-4 has-text-centered"></h3>
+        <div class="container is-max-desktop">
+          <div class="columns is-centered">
             <div class="column">
-              <h2 style="text-align: center;">
-                <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/018.jpeg" width="50%">
-              </h2>
-              <video controls muted loop width="270" height="270">
+              <video controls muted loop>
                 <!-- Your video here -->
-                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/results/018.mp4" type="video/mp4">
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/002.mov" type="video/mp4">
               </video>
-              <h2 style="text-align: center;">
-                <a
-                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/018.ply">Open
-                  Interactive Viewer
-                </a>
-              </h2> 
             </div>
-            <div class="column">
-              <h2 style="text-align: center;">
-                <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/019.png" width="50%">
-              </h2>
-              <video controls muted loop width="270" height="270">
+            <div class="column is-centered has-text-centered">
+              <video controls muted loop width="247" height="247">
                 <!-- Your video here -->
-                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/results/019.mp4" type="video/mp4">
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/002.mp4" type="video/mp4">
               </video>
-              <h2 style="text-align: center;">
-                <a
-                  href="splat/index.html?url=https://huggingface.co/facelift-web/facelift/resolve/main/plys/019.ply">Open
-                  Interactive Viewer
-                </a>
-              </h2> 
+            </div>
+          </div>
+        </div>
+        <!-- row 3 -->
+        <h3 class="title is-4 has-text-centered"></h3>
+        <div class="container is-max-desktop">
+          <div class="columns is-centered">
+            <div class="column">
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/004.mov" type="video/mp4">
+              </video>
+            </div>
+            <div class="column is-centered has-text-centered">
+              <video controls muted loop width="263" height="263">
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/004.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+        <!-- row 4 -->
+        <h3 class="title is-4 has-text-centered"></h3>
+        <div class="container is-max-desktop">
+          <div class="columns is-centered">
+            <div class="column">
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/005.mov" type="video/mp4">
+              </video>
+            </div>
+            <div class="column is-centered has-text-centered">
+              <video controls muted loop width="263" height="263">
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/005.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+        <p>
+          FaceLift can be combined with 2D face animation methods like <a href="https://liveportrait.github.io" target="_blank">LivePortrait</a> to achieve 3D face animation.
+        </p>
+        <!-- row 1 -->
+        <h3 class="title is-4 has-text-centered"></h3>
+        <div class="container is-max-desktop">
+          <div class="columns is-centered">
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">Input Image</b></h4>
+              <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/000.png">
+            </div>
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">2D Animation (by LivePortrait)</b></h4>
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/live_001.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">3D Animation</b></h4>
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/live_001.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+        <!-- row 2 -->
+        <h3 class="title is-4 has-text-centered"></h3>
+        <div class="container is-max-desktop">
+          <div class="columns is-centered">
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">Input Image</b></h4>
+              <img src="https://huggingface.co/facelift-web/facelift/resolve/main/images/005.png">
+            </div>
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">2D Animation (by LivePortrait)</b></h4>
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/inputs/live_002.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="column is-centered has-text-centered">
+              <h4 class="title is-5 is-centered has-text-centered"><b style="color:#808080">3D Animation</b></h4>
+              <video controls muted loop>
+                <!-- Your video here -->
+                <source src="https://huggingface.co/facelift-web/facelift/resolve/main/videos/4d_nvs/outputs/live_002.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
         </div>
@@ -529,7 +588,6 @@
           <p>
             This page is adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
           </p>
-
         </div>
       </div>
     </div>
